--- a/data-analyst.html
+++ b/data-analyst.html
@@ -72,7 +72,7 @@
 	
 <!--Begin body here --> 
 <h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698607225-associate-director-data-analysis'>Publicis Groupe Associate Director, Data & Analysis | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">New York, NY 10014, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/myokardia/job/oSmsbfwB'>MyoKardia, Inc. Careers - Principal, PV Data & Quality Analyst</a></h5> 
@@ -87,7 +87,7 @@
 <p><span class="badge badge-light">Centreville, Virginia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/c4a6638a-f1e9-40c6-a8cb-f14ad8e1776e'>Datacom - Service Desk Analyst - Auckland</a></h5> 
+<h5><a href='https://jobs.lever.co/datacom.co.nz/c4a6638a-f1e9-40c6-a8cb-f14ad8e1776e'>Datacom - Service Desk Analyst - Auckland</a></h5> 
 <p><span class="badge badge-light">Auckland  Auckland  Auckland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -111,7 +111,7 @@
 <p><span class="badge badge-light">Washington, DCWashington, DC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://grofers.recruiterbox.com/jobs/fk03d44'>
+<h5><a href='http://grofers.recruiterbox.com/jobs/fk03d44'>
     Data Analyst  at Grofers
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -229,7 +229,7 @@
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lewisham.referrals.selectminds.com/jobs/trainee-data-analyst-995'>Trainee Data Analyst - Lewisham Jobs Careers</a></h5> 
+<h5><a href='https://lewisham.referrals.selectminds.com/jobs/trainee-data-analyst-995'>Trainee Data Analyst - Lewisham Jobs Careers</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -245,7 +245,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ShoreConsulting/743999698516054-senior-business-data-analyst-health-sector-experience-qa-experience-'>Shore Consulting Senior Business Data Analyst (Health Sector Experience/QA experience) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ShoreConsulting/743999698516054-senior-business-data-analyst-health-sector-experience-qa-experience-'>Shore Consulting Senior Business Data Analyst (Health Sector Experience/QA experience) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -257,7 +257,7 @@
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://formarshgroup.applytojob.com/apply/RqDqOIB5y1/Senior-Survey-Statistician'>Senior Survey Statistician - Fors Marsh Group - Career Page</a></h5> 
+<h5><a href='http://formarshgroup.applytojob.com/apply/RqDqOIB5y1/Senior-Survey-Statistician'>Senior Survey Statistician - Fors Marsh Group - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -269,7 +269,7 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/desmos/66ffa184-9a07-40ca-91d3-346b1e648dbd'>Desmos - Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/desmos/66ffa184-9a07-40ca-91d3-346b1e648dbd'>Desmos - Data Analyst</a></h5> 
 <p><span class="badge badge-light">United States San Francisco</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -289,7 +289,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mediamolecule/jobs/4495997002'>Job Application for Data Analyst at Media Molecule</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mediamolecule/jobs/4495997002'>Job Application for Data Analyst at Media Molecule</a></h5> 
 <p><span class="badge badge-light">Guildford  Guildford</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
