--- a/android-engineer.html
+++ b/android-engineer.html
@@ -74,7 +74,7 @@
 <p><span class="badge badge-light">Beaverton, OR Beaverton, OR</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/eleostech/e09301bb-0e4e-4ccd-8d5f-e185f7ebd541'>Eleos Technologies - Android/iOS Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/eleostech/e09301bb-0e4e-4ccd-8d5f-e185f7ebd541'>Eleos Technologies - Android/iOS Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -123,7 +123,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/medopad/9321840f-9f98-4eb0-8e06-f02089e1e200'>Medopad - Senior Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/medopad/9321840f-9f98-4eb0-8e06-f02089e1e200'>Medopad - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -141,11 +141,11 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Cricut/743999698069573-senior-android-sw-engineer'>Cricut Senior Android SW Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Cricut/743999698069573-senior-android-sw-engineer'>Cricut Senior Android SW Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jordan</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gojek/2dd5091d-1994-4003-bbd5-e84056e8742d'>Gojek - Android Engineer - Developer Experience</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/2dd5091d-1994-4003-bbd5-e84056e8742d'>Gojek - Android Engineer - Developer Experience</a></h5> 
 <p><span class="badge badge-light">Jakarta</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -189,7 +189,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-fr/job/o4robfwO'>Carri?res Trek Bicycle - Android Mobile Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/trek-bicycle-fr/job/o4robfwO'>Carri?res Trek Bicycle - Android Mobile Software Engineer</a></h5> 
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -202,7 +202,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p>Oct 14, 2019 ... We are a leading digital bank on a mission to disrupt the banking industry. We've 
 built an app with smart money management tools to help our customers live a?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qUJ9Vfwr&k=Job&j=oRYnbfw7&__jvst=Employee&__jvsd=sxYTchwm&__jvsc=Twitter&bid=nwFrgMw9'>Nerdery Careers - Android Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qUJ9Vfwr&k=Job&j=oRYnbfw7&__jvst=Employee&__jvsd=sxYTchwm&__jvsc=Twitter&bid=nwFrgMw9'>Nerdery Careers - Android Engineer</a></h5> 
 <p><span class="badge badge-light">Minneapolis, Minnesota  Chicago, Illinois  Phoenix, Arizona</span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
@@ -230,11 +230,11 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Minneapolis, Minnesota  Chicago, Illinois  Phoenix, Arizona</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blinkhealth/jobs/4476184002'>Job Application for Senior Android Engineer at Blink Health</a></h5> 
+<h5><a href='https://boards.greenhouse.io/blinkhealth/jobs/4476184002'>Job Application for Senior Android Engineer at Blink Health</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sanerjobs.com/job/android-engineer-stripe/114'>Android Engineer at Stripe - SanerJobs</a></h5> 
+<h5><a href='https://sanerjobs.com/job/android-engineer-stripe/114'>Android Engineer at Stripe - SanerJobs</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
@@ -242,7 +242,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/codelitt-incubator/j/A88CCE4117/'>Android/iOS Engineer - Codelitt Incubator</a></h5> 
+<h5><a href='https://apply.workable.com/codelitt-incubator/j/A88CCE4117/'>Android/iOS Engineer - Codelitt Incubator</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Great communication and English skills; Great iOS or Android experience with 
 code to prove it; Javascript experience a plus; You know how to architect all?...</p>
@@ -263,7 +263,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Berlin, Germany  Australia Italy</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4460706002'>Job Application for  Android Engineering Team Lead - Store Pick at Ocado Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4460706002'>Job Application for  Android Engineering Team Lead - Store Pick at Ocado Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -275,7 +275,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/M-TRIBESGmbH/743999697341092-senior-android-engineer-m-f-d-nis'>M-TRIBES GmbH Senior Android Engineer (m/f/d) - Ni? | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/M-TRIBESGmbH/743999697341092-senior-android-engineer-m-f-d-nis'>M-TRIBES GmbH Senior Android Engineer (m/f/d) - Ni? | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -314,7 +314,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.talkdesk.com/careers/td/lisbon/ambassadors/ambassadors-fct-1900036?gh_jid=1900036'>Android Software Engineer  [Porto] - Careers | Talkdesk</a></h5> 
+<h5><a href='https://www.talkdesk.com/careers/td/lisbon/ambassadors/ambassadors-fct-1900036?gh_jid=1900036'>Android Software Engineer  [Porto] - Careers | Talkdesk</a></h5> 
 <p><span class="badge badge-light">Lisbon</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -350,7 +350,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999697091104-senior-android-engineer'>Square Senior Android Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999697091104-senior-android-engineer'>Square Senior Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CAUnited States</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
@@ -370,7 +370,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/newrelic/job/o2JgbfwW'>New Relic Careers - Senior Android Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/newrelic/job/o2JgbfwW'>New Relic Careers - Senior Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -408,7 +408,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on:: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/creditkarma/79bd1ea8-b7a6-4da8-b76e-669c5dde8121'>Credit Karma - Android Engineer (Charlotte,NC)</a></h5> 
+<h5><a href='https://jobs.lever.co/creditkarma/79bd1ea8-b7a6-4da8-b76e-669c5dde8121'>Credit Karma - Android Engineer (Charlotte,NC)</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC  Canada</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -460,7 +460,7 @@ work on innovative mobile projects that would impact tens of millions of people'
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oUobbfwo&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nV6r0MwJ'>Benefitfocus Careers - Android Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oUobbfwo&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nV6r0MwJ'>Benefitfocus Careers - Android Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-04</p>
 <hr/>
